[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/parents/parent_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemies/planta.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemy_flower.gd" type="Script" id=3]
[ext_resource path="res://Scenes/actors/enemies/playerDetector.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 72, 17 )

[node name="enemy_flower" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="EnemyStats" parent="." index="0"]
max_health = 5

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="bulletInitPos" type="Position2D" parent="Sprite" index="0"]
position = Vector2( 3, -1 )

[node name="AnimationPlayer" parent="." index="3"]
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Hitbox" parent="." index="4"]
position = Vector2( 0, -5 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Hurtbox" parent="." index="5"]
position = Vector2( 0, -7 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="playerDetector" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( 0, -7 )

[node name="CollisionShape2D" parent="playerDetector" index="0"]
modulate = Color( 1, 1, 1, 0.47451 )
shape = SubResource( 5 )

[node name="attackDelay" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="playerDetector"]
